Name:                chick
Version:             0.1
Synopsis:            Coq's little brother
Description:         Coq's little brother
License:             MIT
License-file:        LICENSE
Author:              Valentin Robert
Maintainer:          vrobert@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.22

Source-repository head
  type:     git
  location: https://github.com/Ptival/chick

Library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-orphans
  hs-source-dirs:   lib, test
  build-depends: base                      >= 4.9   && < 4.10,
                 bifunctors                >= 5.4   && < 5.5,
                 data-default              >= 0.7   && < 0.8,
                 free                      >= 4.12  && < 4.13,
                 GenericPretty             >= 1.2   && < 1.3,
                 lens                      >= 4.14  && < 4.16,
                 megaparsec                >= 5.0   && < 5.1,
                 mtl                       >= 2.2   && < 2.3,
                 pretty                    >= 1.1   && < 1.2,
                 QuickCheck                >= 2.8   && < 2.10,
                 smallcheck                >= 1.1   && < 1.2,
                 tasty                     >= 0.11  && < 0.12,
                 tasty-hunit               >= 0.9   && < 0.10,
                 tasty-quickcheck          >= 0.8   && < 0.9,
                 tasty-smallcheck          >= 0.8   && < 0.9,
                 unbound-generics          >= 0.3   && < 0.4,
                 wl-pprint-annotated       >= 0.0   && < 0.1
  exposed-modules: Notations
                   Parsing
                   Precedence
                   PrettyPrinting
                   Tactic
                   Term.AlphaEquivalence
                   Term.AlphaRenaming
                   Term.Fold
                   Term.Free
                   Term.Fresh
                   Term.NumberedTerm
                   Term.RawTerm
                   Term.Substitution
                   Term.Term
                   Term.TypeCheckedTerm
                   Term.TypeErroredTerm
                   WellFormed
  other-modules:

Test-suite Test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends: chick,
                 base                      >= 4.9   && < 4.10,
                 data-default              >= 0.7   && < 0.8,
                 megaparsec                >= 5.0   && < 5.1,
                 QuickCheck                >= 2.8   && < 2.10,
                 smallcheck                >= 1.1   && < 1.2,
                 tasty                     >= 0.11  && < 0.12,
                 tasty-hunit               >= 0.9   && < 0.10,
                 tasty-quickcheck          >= 0.8   && < 0.9,
                 tasty-smallcheck          >= 0.8   && < 0.9

Executable chick
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
    base,
    chick
