Name:                chick
Version:             0.1
Synopsis:            Coq's little brother
Description:         Coq's little brother
License:             MIT
License-file:        LICENSE
Author:              Valentin Robert
Maintainer:          vrobert@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.22

Source-repository head
  type:     git
  location: https://github.com/Ptival/chick

Library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-orphans
  hs-source-dirs:   lib, test
  build-depends: base                      >= 4.0   && < 4.10,
                 -- bifunctors                >= 5.4   && < 5.5,
                 bound                     >= 1.0   && < 2.0,
                 convertible               >= 1.1   && < 1.2,
                 data-default              >= 0.7   && < 0.8,
                 free                      >= 4.12  && < 4.13,
                 freer-effects             >= 0.3   && < 0.4,
                 gdiff                     >= 1.0   && < 1.2,
                 GenericPretty             >= 1.2   && < 1.3,
                 -- hashable                  >= 1.2   && < 1.3,
                 lens                      >= 4.14  && < 4.16,
                 megaparsec                >= 5.0   && < 5.3,
                 mtl                       >= 2.2   && < 2.3,
                 -- prelude-extras            >= 0.4   && < 0.5,
                 -- pretty                    >= 1.1   && < 1.2,
                 QuickCheck                >= 2.8   && < 2.10,
                 smallcheck                >= 1.1   && < 1.2,
                 -- tasty                     >= 0.11  && < 0.12,
                 -- tasty-hunit               >= 0.9   && < 0.10,
                 -- tasty-quickcheck          >= 0.8   && < 0.9,
                 -- tasty-smallcheck          >= 0.8   && < 0.9,
                 -- transformers              >= 0.5.2 && < 0.6,
                 -- unbound-generics          >= 0.3   && < 0.4,
                 wl-pprint-annotated       >= 0.0   && < 0.1
  exposed-modules: Atomic
                   DictMetaOut
                   Diff.Atom
                   Diff.Constructor
                   Diff.Diff
                   Diff.GlobalDeclaration
                   Diff.GlobalEnvironment
                   Diff.Inductive
                   Diff.List
                   Diff.LocalContext
                   Diff.LocalDeclaration
                   Diff.Script
                   Diff.State
                   Diff.Term
                   Diff.Utils
                   Diff.Variable
                   Diff.Vernacular
                   Goal
                   Inductive.Constructor
                   Inductive.Inductive
                   Notations
                   Parsing
                   Parsing.Atomic
                   Parsing.Tactic
                   Parsing.Utils
                   Playground
                   Precedence
                   PrettyPrinting.Chick.Term
                   PrettyPrinting.Term
                   PrettyPrinting.PrettyPrintable
                   PrettyPrinting.PrettyPrintableAnnotated
                   PrettyPrinting.PrettyPrintableUnannotated
                   PrettyPrinting.Tactic
                   PrettyPrinting.Utils
                   Script
                   StandardLibrary
                   Tactic
                   Term.AlphaEquivalence
                   Term.AlphaRenaming
                   Term.Binder
                   Term.Diff
                   Term.Free
                   Term.Fresh
                   Term.Raw
                   Term.Term
                   Term.TypeChecked
                   Term.TypeErrored
                   Term.Variable
                   TypeCheckingFailure
                   Typing.Free
                   Typing.GlobalDeclaration
                   Typing.GlobalEnvironment
                   Typing.Inductive
                   Typing.LocalContext
                   Typing.LocalContextOps
                   Typing.LocalDeclaration
                   Typing.TypeCheckOps
                   Typing.TypeChecker
                   Typing.Utils
                   Utils
                   Vernacular
                   WellFormed
                   Work

-- Test-suite Test
--   default-language: Haskell2010
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test
--   main-is:          Main.hs
--   build-depends: chick,
--                  base                      >= 4.9   && < 4.10,
--                  data-default              >= 0.7   && < 0.8,
--                  megaparsec                >= 5.0   && < 5.3,
--                  QuickCheck                >= 2.8   && < 2.10,
--                  smallcheck                >= 1.1   && < 1.2,
--                  tasty                     >= 0.11  && < 0.12,
--                  tasty-hunit               >= 0.9   && < 0.10,
--                  tasty-quickcheck          >= 0.8   && < 0.9,
--                  tasty-smallcheck          >= 0.8   && < 0.9

Executable chick
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
    base,
    chick
