Name:                chick
Version:             0.1
Synopsis:            Coq's little brother
Description:         Coq's little brother
License:             MIT
License-file:        LICENSE
Author:              Valentin Robert
Maintainer:          vrobert@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.22

Source-repository head
  type:     git
  location: https://github.com/Ptival/chick

Library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-orphans
  hs-source-dirs:   lib, test
  pkgconfig-depends: zlib
  build-depends: adjunctions               >= 4.3   && < 4.4,
                 aeson                     >= 1.1   && < 1.2,
                 base                      >= 4.0   && < 4.10,
                 -- bifunctors                >= 5.4   && < 5.5,
                 -- boomerang                 >= 1.4   && < 1.5,
                 bound                     >= 1.0   && < 2.0,
                 bytestring                >= 0.10  && < 0.11,
                 containers                >= 0.5   && < 0.6,
                 convertible               >= 1.1   && < 1.2,
                 data-default              >= 0.7   && < 0.8,
                 directory                 >= 1.2   && < 1.4,
                 either                    >= 4.4   && < 4.5,
                 extra                     >= 1.5   && < 1.7,
                 free                      >= 4.12  && < 4.13,
                 -- free-functors             >= 0.8   && < 0.9,
                 freer-effects             >= 0.3   && < 0.4,
                 gdiff                     >= 1.0   && < 1.2,
                 ghc                       >= 8.0   && < 9.0,
                 GenericPretty             >= 1.2   && < 1.3,
                 -- hashable                  >= 1.2   && < 1.3,
                 hslogger                  >= 1.2   && < 1.3,
                 -- invertible-syntax         >= 0.2   && < 0.3,
                 lens                      >= 4.14  && < 4.16,
                 megaparsec                >= 5.0   && < 5.4,
                 MissingH                  >= 1.4   && < 1.5,
                 monad-loops               >= 0.4   && < 0.5,
                 mtl                       >= 2.2   && < 2.3,
                 network                   >= 2.6   && < 2.7,
                 -- partial-isomorphisms      >= 0.2   && < 0.3,
                 -- prelude-extras            >= 0.4   && < 0.5,
                 -- pretty                    >= 1.1   && < 1.2,
                 process                   >= 1.2   && < 1.5,
                 QuickCheck                >= 2.8   && < 2.10,
                 random                    >= 1.1   && < 1.2,
                 smallcheck                >= 1.1   && < 1.2,
                 snap                      >= 1.0   && < 1.1,
                 snap-core                 >= 1.0   && < 1.1,
                 snap-server               >= 1.0   && < 1.1,
                 -- syntax                    >= 1.0   && < 1.1,
                 tasty                     >= 0.11  && < 0.12,
                 tasty-hunit               >= 0.9   && < 0.10,
                 tasty-quickcheck          >= 0.8   && < 0.9,
                 tasty-smallcheck          >= 0.8   && < 0.9,
                 text                      >= 1.2   && < 1.3,
                 time                      >= 1.5   && < 1.7,
                 -- transformers              >= 0.5.2 && < 0.6,
                 -- unbound-generics          >= 0.3   && < 0.4,
                 unordered-containers      >= 0.2   && < 0.3,
                 utf8-string               >= 1.0   && < 1.1,
                 wl-pprint-annotated       >= 0.0   && < 0.2
  exposed-modules:
                  --Atomic
                  DictMetaOut
                  Diff.Atom
                  Diff.Binder
                  Diff.ConcatMap
                  Diff.Constructor
                  Diff.Eliminator
                  Diff.Guess.Atom
                  Diff.Guess.Constructor
                  Diff.Guess.Inductive
                  Diff.Guess.Script
                  Diff.Guess.Term
                  Diff.Guess.Vernacular
                  Diff.GlobalDeclaration
                  Diff.GlobalEnvironment
                  Diff.Inductive
                  Diff.List
                  Diff.ListFold
                  Diff.ListFoldLeft
                  Diff.ListFoldRight
                  Diff.ListFoldUtils
                  Diff.LocalContext
                  Diff.LocalDeclaration
                  Diff.Motive
                  Diff.Pair
                  Diff.Script
                  Diff.Term
                  Diff.Triple
                  Diff.Utils
                  Diff.Variable
                  Diff.Vernacular
                  Goal
                  Inductive.Eliminator
                  Inductive.Inductive
                  Inductive.Motive
                  Inductive.Utils
                  Notations
                  Parsing
                  -- Parsing.Atomic
                  Parsing.Inductive
                  Parsing.Inductive.Test
                  Parsing.Script
                  -- Parsing.Tactic
                  Parsing.Utils
                  Parsing.Vernacular
                  -- Playground
                  Precedence
                  PrettyPrinting.Chick.Term
                  PrettyPrinting.Term
                  PrettyPrinting.PrettyPrintable
                  PrettyPrinting.PrettyPrintableAnnotated
                  PrettyPrinting.PrettyPrintableUnannotated
                  -- PrettyPrinting.Tactic
                  PrettyPrinting.Universe
                  PrettyPrinting.Utils
                  Repair.Benchmark
                  Repair.Inductive
                  Repair.Script
                  Repair.State
                  Repair.Term
                  Repair.Utils
                  Repair.Vernacular
                  Script
                  Server.Chick
                  Server.ChickHandler
                  Server.Server
                  Server.Session
                  Snap.Extras.JSON
                  StandardLibrary
                  StandardLibraryDiff
                    -- Tactic
                  Term.AlphaEquivalence
                  Term.AlphaRenaming
                  Term.Binder
                  Term.Diff
                  Term.Free
                  Term.Fresh
                  Term.Raw
                  Term.Term
                  Term.TypeChecked
                  Term.TypeErrored
                  Term.Universe
                  Term.Variable
                  TypeCheckingFailure
                  -- Typing.Free
                  Typing.GlobalDeclaration
                  Typing.GlobalEnvironment
                  -- Typing.Inductive
                  Typing.LocalContext
                  --Typing.LocalContextOps
                  Typing.LocalDeclaration
                  -- Typing.TypeCheckOps
                  -- Typing.TypeChecker
                  Typing.Utils
                  Utils
                  Vernacular
                  WellFormed
                  -- Work

Test-suite Test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends: chick,
                 base                      >= 4.9   && < 4.10,
                 data-default              >= 0.7   && < 0.8,
                 megaparsec                >= 5.0   && < 5.3,
                 QuickCheck                >= 2.8   && < 2.10,
                 smallcheck                >= 1.1   && < 1.2,
                 tasty                     >= 0.11  && < 0.12,
                 tasty-hunit               >= 0.9   && < 0.10,
                 tasty-quickcheck          >= 0.8   && < 0.9,
                 tasty-smallcheck          >= 0.8   && < 0.9
  other-modules:
    Parsing.Inductive.Test

Executable chick
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
    base,
    chick
