cabal-version: 3.0
name:          chick
version:       0.1.0
author:        Valentin Robert <valentin.robert.42@gmail.com>
maintainer:    Valentin Robert <valentin.robert.42@gmail.com>
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common common-options
  build-depends:
    , base
    , data-default
    , megaparsec
    , polysemy

  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    KindSignatures
    LambdaCase
    MonoLocalBinds
    NamedFieldPuns
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax

  default-language:   Haskell2010
  ghc-options:        -Wall -Werror

library
  import:          common-options
  exposed-modules:
    Diff.Atom
    Diff.ConcatMap
    Diff.Constructor
    Diff.Eliminator
    Diff.Guess.Constructor
    Diff.Guess.Inductive
    Diff.Guess.Node
    Diff.Guess.Script
    Diff.Guess.Term
    Diff.Inductive
    Diff.List
    Diff.Motive
    Diff.Script
    Diff.Term
    Examples.Diff.SoftwareFoundations
    Examples.Term
    Examples.Utils
    FromOCaml
    Inductive.Eliminator
    Inductive.Inductive
    Inductive.Motive
    Language
    Notations
    Parsing
    Parsing.Inductive
    Parsing.Unsafe
    Precedence
    PrettyPrinting.Chick
    PrettyPrinting.HasNonBindingPattern
    PrettyPrinting.PrettyPrintable
    PrettyPrinting.PrettyPrintableUnannotated
    PrettyPrinting.Term
    Repair.Benchmark
    Script
    Server.Server
    StandardLibrary
    StandardLibraryDiff
    Term.Raw
    Term.Term
    Term.Universe
    Term.Variable
    Utils

  other-modules:
    Bound.ScopeT
    Definition
    DefinitionObjectKind
    DictMetaOut
    Diff.Binder
    Diff.GlobalDeclaration
    Diff.GlobalEnvironment
    Diff.Guess.Atom
    Diff.Guess.BottomUp
    Diff.Guess.HIList
    Diff.Guess.Mapping
    Diff.Guess.TopDown
    Diff.Guess.Vernacular
    Diff.ListFold
    Diff.ListFoldLeft
    Diff.ListFoldRight
    Diff.ListFoldUtils
    Diff.LocalContext
    Diff.LocalDeclaration
    Diff.Maybe
    Diff.Pair
    Diff.Triple
    Diff.Utils
    Diff.Variable
    Diff.Vernacular
    Examples.Inductive
    Goal
    Inductive.Utils
    Parsing.Chick.Utils
    Parsing.Script
    Parsing.Types
    Parsing.Utils
    Parsing.Vernacular
    PrettyPrinting.Chick.Binder
    PrettyPrinting.Chick.Constructor
    PrettyPrinting.Chick.Declaration
    PrettyPrinting.Chick.Definition
    PrettyPrinting.Chick.DefinitionObjectKind
    PrettyPrinting.Chick.GlobalDeclaration
    PrettyPrinting.Chick.GlobalEnvironment
    PrettyPrinting.Chick.Inductive
    PrettyPrinting.Chick.List
    PrettyPrinting.Chick.LocalContext
    PrettyPrinting.Chick.LocalDeclaration
    PrettyPrinting.Chick.Pair
    PrettyPrinting.Chick.Script
    PrettyPrinting.Chick.Term
    PrettyPrinting.Chick.Triple
    PrettyPrinting.Chick.Unit
    PrettyPrinting.Chick.Universe
    PrettyPrinting.Chick.Variable
    PrettyPrinting.Chick.Vernacular
    PrettyPrinting.PrettyPrintableAnnotated
    PrettyPrinting.Universe
    PrettyPrinting.Utils
    Repair.Inductive
    Repair.Script
    Repair.State
    Repair.Term
    Repair.Term.Argument
    Repair.Term.Branch
    Repair.Utils
    Repair.Vernacular
    Server.Chick
    Server.ChickHandler
    Server.Session
    Snap.Extras.JSON
    Term.AlphaEquivalence
    Term.AlphaRenaming
    Term.Binder
    Term.Diff
    Term.Free
    Term.Fresh
    Term.TypeChecked
    Term.TypeErrored
    ToOCaml
    TypeCheckingFailure
    Typing.GlobalDeclaration
    Typing.GlobalEnvironment
    Typing.LocalContext
    Typing.LocalDeclaration
    Typing.Utils
    Vernacular
    WellFormed
    Work

  hs-source-dirs:  lib
  build-depends:
    , adjunctions
    , aeson
    , bound
    , bytestring
    , comonad
    , containers
    , directory
    , either
    , extra
    , free
    , gdiff
    , GenericPretty
    , ghc
    , hslogger
    , language-ocaml
    , lens
    , MissingH
    , monad-loops
    , mtl
    , network
    , prettyprinter
    , process
    , QuickCheck
    , random
    , smallcheck
    , snap
    , snap-core
    , string-qq
    , text
    , time
    , unordered-containers
    , utility-ht

executable chick-server
  import:         common-options
  build-depends:  chick
  hs-source-dirs: exec
  main-is:        Main.hs
  other-modules:  Paths_chick

test-suite chick-tests
  import:         common-options
  build-depends:
    , bound
    , chick
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck

  hs-source-dirs: test
  other-modules:
    Diff.ConcatMap.Test
    Diff.Eliminator.Test
    Diff.Guess.Constructor.Test
    Diff.Guess.Inductive.Test
    Diff.Guess.Script.Test
    Diff.Guess.Term.Test
    Diff.Guess.Vernacular.Test
    Diff.Motive.Test
    Inductive.Eliminator.Test
    Inductive.Inductive.Test
    Parsing.Test
    Parsing.Inductive.Test
    StandardLibraryDiff.Test
    Term.Term.Test
    TestUtils

  main-is:        Main.hs
  type:           exitcode-stdio-1.0
